--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ background-color: #19e9c6;
 
 }
 ::-webkit-scrollbar-thumb{
-    background:linear-gradient(to bottom, #00203FFF, red);
+    background:linear-gradient(to bottom, #265e3d, red);
     border-radius: 5px;
 }
 .logo{
@@ -51,7 +51,7 @@ figure img{
     display: flex;
     position: absolute;
     visibility:hidden; 
-    background-color: #00203FFF ;
+    background-color: #265e3d ;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -70,7 +70,7 @@ figure img{
     padding-top:5px;
     width: 100%;
     height: 50px;
-    background-color: #00203FFF;
+    background-color: #265e3d;
     color: white;
     border-radius: 5px;
     align-items: center;
@@ -111,13 +111,13 @@ figure img{
 .social-icon{
     position: absolute;
     margin-left:650px;
-    background-color: #00203FFF;
+    background-color: #265e3d;
    
 
 }
 
 .enquiry-btn{
-    color: #00203FFF;
+    color: #265e3d;
     font-weight:bolder;
     background-color:white;
     border-radius: 10px;
@@ -146,7 +146,7 @@ figure img{
     left:0;
     transform: translate(70%, 41%);
     border-radius: 10px;
-    color:#00203FFF;
+    color:#265e3d;
     z-index: 5;
     flex-direction: column;
 
@@ -163,7 +163,7 @@ figure img{
     font-size: 30px;
 }
 .cancel:hover i{
-    background-color: #00203FFF !important;
+    background-color: #265e3d !important;
     color: red !important;
 }
 .form-container .enqry-form{
@@ -219,6 +219,8 @@ figure img{
     height: 60px;
   }
 
+  
+
   .enqry-form button{
     font-size: 15px;
     height: 40px;
@@ -229,7 +231,7 @@ figure img{
     border-radius: 5px;
   }
   .enqry-form button:hover{
-    background-color:#00203FFF;
+    background-color:#265e3d;
     cursor: pointer;
 
   }
@@ -246,14 +248,14 @@ figure img{
     top:-10px;
     left:20px;
     transition: all  0.3s ease;
-    color: #00203FFF;
+    color: #265e3d;
     font-weight: 600;
   }
   .enqry-form .form-group input:focus,
   .enqry-form .form-group select:focus,
   .enqry-form .form-group textarea:focus
   {
-    border-color: #00203FFF;
+    border-color: #265e3d;
   }
 
 
@@ -296,12 +298,12 @@ figure img{
     font-size: 12px;
     font-weight: 800;
     text-decoration: none;
-    color: #00203FFF;
+    color: #265e3d;
 }
 
 .head .nav-bar ul li:hover {
     cursor: pointer;
-    background-color: #00203FFF;
+    background-color: #265e3d;
 }
 
 .head .nav-bar ul li:hover a {
@@ -315,7 +317,7 @@ figure img{
     left: 0;
     background-color: #d8dad9fb;
     min-width: 220px;
-    box-shadow: 2px 2px 5px #00203FFF;
+    box-shadow: 2px 2px 5px #265e3d;
     z-index: 3;
     
 }
@@ -327,7 +329,7 @@ figure img{
 }
 
 .head .nav-bar ul li ul li a {
-    color: #00203FFF !important;
+    color: #265e3d !important;
     display: block;
     padding: 0px;
     text-decoration: none;
@@ -418,14 +420,14 @@ figure img{
 }
 .card-color-1{
     color: white;
-    background:linear-gradient(to  right,#00203FFF, #f69024);
+    background:linear-gradient(to  right,#265e3d, #f69024);
 }
 .card-color-2{
     color: white;
     background-color:#f69024;
 }
 .card:hover{
-    background:linear-gradient(to  right, #f69024, #00203FFF);
+    background:linear-gradient(to  right, #f69024, #265e3d);
 }
 
 
@@ -447,7 +449,7 @@ figure img{
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     box-shadow: 5px 5px white;
-    background-color: #00203FFF;
+    background-color: #265e3d;
     color:white !important;
     margin-top:10px;
     height: 40px;
@@ -500,7 +502,7 @@ figure img{
     width:93%;
     object-fit: contain;
     overflow:hidden;
-    box-shadow:  5px 5px 35px #00203FFF,
+    box-shadow:  5px 5px 35px #265e3d,
              -15px -35px 35px #ffffff;
 }
 .slide-container h1 {
@@ -545,7 +547,7 @@ figure img{
     margin-bottom: 30px;
     padding: 10px;
     background-color: #fff;
-    box-shadow: 0px 2px 30px 5px #00203FFF;
+    box-shadow: 0px 2px 30px 5px #265e3d;
 }
 
 .testimonial {
@@ -557,7 +559,7 @@ figure img{
     justify-content: center;
     border-radius: 5px;
     box-shadow: 5px 5px 15px 5px gray;
-    background-color: #00203FFF;
+    background-color: #265e3d;
    
 }
 .testimonial:hover{
@@ -626,7 +628,7 @@ figure img{
     margin-left:50px;
     margin-top:20px;
     padding:5px;
-    background-color:#00203FFF;
+    background-color:#265e3d;
  }
 
  .reach-wrapper img{
@@ -674,7 +676,7 @@ figure img{
     margin-left:50px;
     margin-top:10px;
     width:94%;
-    background-color:#00203FFF;
+    background-color:#265e3d;
     border:3px solid white;
     display:flex;
     color:white;
@@ -723,7 +725,7 @@ footer .copyright{
     margin-top:0px;
     height: 40px;
     width:94%;
-    background-color:#00203FFF;
+    background-color:#265e3d;
     border:3px solid white;
     display:flex;
     color:white;
@@ -882,7 +884,7 @@ footer .copyright a:hover{
         .head .nav-bar ul{
             flex-direction: column !important;
             align-items: center;
-            background-color: #00203FFF;
+            background-color: #265e3d;
             margin-top:40px;
         }
         .head .nav-bar ul li a {
