--- a/css/slick.theme.css
+++ b/css/slick.theme.css
@@ -116,50 +116,44 @@
 /* Dots */
 .slick-dotted.slick-slider
 {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .slick-dots
 {
-    position: absolute;
-    bottom: -25px;
-
-    display: block;
-
+    position: relative;
+    top: 10px;
+    display: flex;
+    justify-content: center;
     width: 100%;
     padding: 0;
-    margin: 0;
-
+    margin: 5px;
     list-style: none;
-
     text-align: center;
 }
 .slick-dots li
 {
     position: relative;
-
     display: inline-block;
-
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
     margin: 0 5px;
     padding: 0;
-
+    background-color: #f69024;
+    border-radius: 10px;
     cursor: pointer;
 }
 .slick-dots li button
 {
+    position: relative;
     font-size: 0;
     line-height: 0;
-
     display: block;
-
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
     padding: 5px;
-
     cursor: pointer;
-
     color: transparent;
     border: 0;
     outline: none;
@@ -169,6 +163,7 @@
 .slick-dots li button:focus
 {
     outline: none;
+    background-color: green;
 }
 .slick-dots li button:hover:before,
 .slick-dots li button:focus:before
@@ -180,13 +175,12 @@
     font-family: 'slick';
     font-size: 6px;
     line-height: 20px;
-
     position: absolute;
     top: 0;
     left: 0;
 
-    width: 20px;
-    height: 20px;
+    width: 10px;
+    height: 10px;
 
     content: '•';
     text-align: center;
