--- a/css/common.css
+++ b/css/common.css
@@ -4,33 +4,42 @@
         overflow-x: hidden !important;
     }
 
-    .section1{
-    margin-top:300px;
-    }
-    .section0{
-        margin-top:10px;
-        height: 400px;
-        width: 93%;
-        margin-left:50px;
-    }
-    .section3{
-        margin-top:50px;
-    }
+
     .container{
         padding:10px 20px;
         margin-bottom: 100px;
+    } 
+
+    /* ::-webkit-scrollbar{
+    width: 5px;
     }
+    ::-webkit-scrollbar-track{
+    background-color: #19e9c6;
+
+    }
+    ::-webkit-scrollbar-thumb{
+        background:linear-gradient(to bottom, #265e3d, red);
+        border-radius: 5px;
+    } */
 
 
 
-@keyframes animate {
-    0%{
-        background:linear-gradit(to left, red, #fec106) ;
+
+    /* h1 Tag Gradient Color CSS Start */
+
+    @keyframes effect {
+        0% {
+            background: linear-gradient( to right, red, #000FFF);
+            -webkit-background-clip: text;
+        }
+    
+        100% {
+            background: linear-gradient(to left, red, #000FFF);
+            -webkit-background-clip: text;
+        }
     }
-    100%{
-        background:linear-gradient(to right, red, #fec106) ;
-    }
-}
+    /* h1 Tag Gradient Color CSS End */
+
 
     i {
         color: white;
@@ -158,217 +167,9 @@
     .text-container-2 .content img:hover{
     box-shadow: 0 4px 8px 0 red;
     }
-    .vision{
-        width: 93%;
-        height: 400px;
-        margin:50px;
-        box-shadow: 0 2px 10px 0 #265e3d;
 
-    }
-    .vision img{
-        padding:10px;
-        position: relative;
-        width: 100%;
-        object-fit: contain;
-        box-sizing: border-box;
-        z-index: -2;
-    }
-    .vision:hover{
-        box-shadow: 0 2px 10px red;
-    }
-    .img-container {
-        margin-top:10px;
-        margin-left:50px;
-        height:auto;
-        width:93%;
-        background-color:whitesmoke;
+    
 
-    }
-    .img-container h1{
-        position: relative;
-        text-align: center;
-        font-weight: bolder;
-        padding: 20px;
-        color: transparent;
-        animation: effect 3s linear infinite;
-
-    }
-
-    .img-container .content{
-        display: grid;
-        width: 100%;
-        margin-top:10px;
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        gap: 12px;
-
-    }
-    .img-container .content img{
-        margin:10px;
-       box-shadow:0 0 15px #265e3d;
-        display: flex;
-        height: 200px;
-        width: 200px;
-        box-sizing: border-box;
-        transition: all ease 1s;
-
-    }
-    .img-container .content img:hover{
-        box-shadow: 0 0 15px red;
-        transform: scale(1.1);
-        transition: all ease 1s;
-    }
-    .mand-disc{
-        display: inline;
-        margin:50px;
-        box-shadow:0 0 15px #265e3d;
-        width: 93%;
-        justify-content: center;
-        align-items: center;
-    }
-    .mand-disc iframe{
-        display: flex;
-        margin:50px;
-        margin-bottom:50px;
-        width:93%;
-        height: 1200px;
-
-    }
-
-    .mand-disc h1{
-       
-        position: relative;
-        text-align: center;
-        font-weight: bolder;
-        padding: 20px;
-        color: transparent;
-        animation: effect 3s linear infinite;
-
-    }
-    .card-container {
-        display: flex;
-        flex-wrap: wrap;
-        height: auto;
-        width: 93%;
-        align-items: center;
-        justify-content: space-evenly;
-        margin-top:30px;  
-        margin-left: 50px;
-    }
-    .card-container .item{
-        background-color:transparent;
-        display: flex;
-        margin:20px;
-        padding:15px;
-        width:200px;
-        border-radius: 5px;
-        text-align: center;
-        flex-direction: column;
-        flex-grow:1;
-        color:black;
-        line-height: 25px;
-        word-wrap: wrap;
-        box-shadow: 2px 2px 20px 5px #265e3d;
-        cursor: pointer;
-    }
-    .card-container .item:hover{
-        box-shadow: 5px 5px 5px 5px gray;
-    }
-    .card-container .item i {
-        color: green;
-        transition:all ease 1s;
-    }
-    .card-container .item:hover i{
-        color:white;
-        background-color: red;
-
-    }
-
-    .reach-wrapper .content .form-group{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-    }
-    .reach-wrapper .content .form-group .row{
-        display: flex;
-        align-items: center;
-        position: relative;
-        justify-content: center;
-        width: 100%;
-        margin-bottom: 20px;
-    }
-    .reach-wrapper .content .form-group h1{
-        margin: 20px 0px;
-    }
-    .form-group .row input,
-    .form-group .row textarea{
-        width: 80%;
-        height: 50px;
-        font-size: 15px;
-        border-radius: 5px;
-        border: 3px solid gray;
-        margin-bottom: 5px;
-    }
-
-    .content .form-group .row label {
-        position: absolute;
-        top:-15px;
-        left:60px;
-        padding: 0px 5px;
-        border-radius: 5px;
-        color: gray;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: white;
-
-    }
-    .content .form-group .row input:placeholder-shown+ label,
-    .content .form-group .row textarea:placeholder-shown+ label
-    {
-        top:15px;
-        left:60px;
-        font-weight: 100;
-        background-color: transparent;
-
-    }
-
-    .content .form-group .row input:focus+ label,
-    .content .form-group .row textarea:focus+ label
-    {
-        top:-15px;
-        left:60px;
-        font-weight: 600;
-        color: #265e3d;
-        background-color: white;
-        transition: all 0.3s ease;
-    }
-    .form-group .row textarea{
-        resize: none;
-        height: 100px;
-    }
-    .form-group .row button{
-        width: 500px;
-        font-size: 18px;
-        font-weight: 800;
-        padding:8px 0px;
-        border-radius: 5px;
-        background-color: rgb(209, 181, 181);
-        transition: all 0.3s ease;
-    }
-    .form-group .row button:hover{
-        
-        border-color: rgb(209, 181, 181);
-        color: rgb(209, 181, 181);
-        background-color: #265e3d;
-        transition: all 0.3s ease;
-    }
-
-
-
-
- 
 
      .course-container .course-bg{
         position: relative;
@@ -423,45 +224,7 @@
         color: transparent;
         animation:effect 3s linear infinite;
     }
-    .workshop-container {
-        width: 94%;
-        margin-left: 50px;
-        height: auto;
-    }
-
-    .workshop-container .workshop-content{
-        height: 100%;
-        width: 100%;
-        display: flex;
-
-    }
-     .workshop-container .workshop-content .col{
-        padding: 20px;
-        width: 50%;
-        margin-top:0px;
-        border: 3px solid #265e3d;
-     }
-     .workshop-container .workshop-content .left{
-        width: 850px;
-        background-color: wheat;
-     }
-     .workshop-container .workshop-content .right{
-        background-color:white;
-     }
-     .workshop-container .workshop-content .left p{
-        padding:20px 20px 0px 20px;
-        text-align: left;
-        justify-content:justify;
-        text-wrap: wrap;
-        line-height: 23px;
-        letter-spacing: 1px;
-        word-spacing: 3px;
-        color: #265e3d;
-     }
-     .workshop-container .workshop-content .right img{
-        width: fit-content;
-        height: 400px;
-     }
+   
      .txt-container{
         width: 91.5%;
         margin-left: 50px;
@@ -491,87 +254,35 @@
         color: transparent;
         animation:effect 3s linear infinite;
     }
-.facility-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top:50px;
-    gap:20px 50px;
-    padding: 40px;
-    background-color: white;
 
-}
-.facility-container .facility{
-    height: 320px;
-    width: 30%;
-    overflow: hidden;
-    justify-content: space-between;
-    background-color:#265e3d;
-    text-align: center;
-    box-shadow: -2px 5px 20px 10px rgba(128, 128, 128, 0.884);
-    border-radius: 10px;
-    border: 1px solid  whitesmoke;
+    .show-big-container{
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        top:0%;
+        left:0%;
+        align-items: center;
+        justify-content: center;
+        content: '';
+        display: none;
+        overflow: hidden;
+        z-index: 5;
 
-}
-.facility-container .facility h3{
-    color: white;
-    font-size: 15px;
-    line-height: 40px;
-    margin-top:20px;
-    bottom: 0px;;
-    position: relative;
+    }
 
-}
+    .show-big-container .big-image {
+        display: flex;
+        width: 80%;
+        max-height: 80vh;
+        cursor: zoom-out;
+        border: 3px solid salmon;
+    }
 
-.facility-container .facility img{
-    aspect-ratio: 3/2;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    transition: all 0.5s ease-in-out;
-
-}
-.facility:hover .image{
-    transform: scale(1.2);
-    transition: all 0.5s ease-in-out;
-}
-.facility .image:hover{
-    cursor: zoom-in;
-}
-
-
-
-
-
-.show-big-container{
-    position: fixed;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
-    top:0%;
-    left:0%;
-    align-items: center;
-    justify-content: center;
-    content: '';
-    display: none;
-    overflow: hidden;
-    z-index: 5;
-
-}
-
-.show-big-container .big-image {
-    display: flex;
-    width: 80%;
-    max-height: 80vh;
-    cursor: zoom-out;
-    border: 3px solid salmon;
-}
-
-.show-big-container:hover .big-image{
-    transform: scale(1.2);
-    transition: all 2s ease-in;
-}
+    .show-big-container:hover .big-image{
+        transform: scale(1.2);
+        transition: all 2s ease-in;
+    }
 
 
 
